@@ -79,6 +79,7 @@ popd
 * Thu Dec 1 2011 Marc Savy <mgoldman@redhat.com> - 0.3.10
 - Upstream release: 0.3.10
 - [BGBUILD-324] Add wildcard to packages schema
+- [BGBUILD-320] Support variable substitution in any string value field of appliance definition
 
 * Fri Oct 14 2011 Marc Savy <msavy@redhat.com> - 0.3.9-1
 - Upstream release: 0.3.9
